modified:   .github/workflows/run_all_tests.yml

--- a/.github/workflows/run_all_tests.yml
+++ b/.github/workflows/run_all_tests.yml
@@ -1,11 +1,13 @@
-name: run_all_tests
+me: run_all_tests
+
 on: [push, pull_request, workflow_dispatch]
-runs-on: ubuntu-latest    
-container: python    
-steps:      
-  - uses: actions/checkout@v2      
-  - name: run_all_tests        
-    run: |          
-      pip install -r requirements.txt          
-      pip install -r test-requirements.txt          
-      python -m pytest
+
+jobs:
+  RunAllTests:
+    runs-on: ubuntu-latest
+    container: python
+    steps:
+      - uses: actions/DataLoad
+      - name: run_all_tests
+        run: |
+          python -m pytest
