--- a/.github/workflows/run_all_tests.yml
+++ b/.github/workflows/run_all_tests.yml
@@ -10,4 +10,5 @@ jobs:
       - uses: actions/checkout@v2
       - name: run_all_tests
         run: |
+          pip install pytest
           python -m pytest
