--- a/.github/workflows/run_all_tests.yml
+++ b/.github/workflows/run_all_tests.yml
@@ -10,5 +10,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: run_all_tests
         run: |
+          wget https://www.openslr.org/resources/12/train-clean-100.tar.gz
+          tar xzf train-clean-100.tar.gz
           pip install pytest
           python -m pytest
