--- a/.github/workflows/run_all_tests.yml
+++ b/.github/workflows/run_all_tests.yml
@@ -9,6 +9,5 @@ jobs:
       - uses: actions/checkout@v2      
       - name: run_all_tests        
         run: |         
-          pip install -r requirements.txt          
-          pip install -r test-requirements.txt          
+          pip install pytest        
           python -m pytest
