--- a/.github/workflows/run_all_tests.yml
+++ b/.github/workflows/run_all_tests.yml
@@ -9,6 +9,6 @@ jobs:
       - uses: actions/checkout@v2      
       - name: run_all_tests        
         run: |     
-          conda install -c conda-forge librosa 
+          pip install librosa
           pip install pytest        
           python -m pytest
