--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,12 +1,15 @@
 name: run_all_tests
+
 on: [push, pull_request, workflow_dispatch]
+
 jobs:
-    RunAllTests:
-        runs-on: ubuntu-latest
-        container: python
-        steps:
-            - uses: actions/checkout@v2
-            - name: run_all_tests
-              run: |
-                pip install pytest
-                python -m pytest
+  RunAllTests:
+    runs-on: ubuntu-latest
+    container: python
+    steps:
+      - uses: actions/checkout@v2
+      - name: run_all_tests
+        run: |
+          pip install -r requirements.txt
+          pip install -r test-requirements.txt
+          python -m pytest
