--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-dependencies:
-	- tensorflow=2.3
-	- protobuf
-	- jupyterlab
-	- opencv
-	- matplotlib
-	- requests
-	- pandas
-	- librosa
-	- ipython
-	- numpy
+tensorflow=2.3
+protobuf
+jupyterlab
+opencv
+matplotlib
+requests
+pandas
+librosa
+ipython
+numpy
