--- a/.github/workflows/run_all_tests.yaml
+++ b/.github/workflows/run_all_tests.yaml
@@ -11,7 +11,7 @@ jobs:
       - name: run_all_tests
         run: |
           pip install -r requirements.txt
-          pip install -r requirements-test.txt
+          pip install -r test-requirements.txt
           python -m pytest
           
 
