--- a/.github/workflows/run_all_tests.yaml
+++ b/.github/workflows/run_all_tests.yaml
@@ -12,6 +12,6 @@ jobs:
         run: |
           pip install -r requirements.txt
           pip install -r test-requirements.txt
-          python -m pytest
+          python -m pytest test/test1.py
           
 
