--- a/.github/workflows/run_all_tests.yml
+++ b/.github/workflows/run_all_tests.yml
@@ -11,5 +11,6 @@ jobs:
       - name: run_all_tests        
         run: |          
           pip install -r requirements.txt          
-          pip install -r test-requirements.txt          
+          pip install -r test-requirements.txt
+          python -m pytest
           
