--- a/.github/workflows/run_all_tests.yaml
+++ b/.github/workflows/run_all_tests.yaml
@@ -8,6 +8,7 @@ jobs:
     container: python:3.9.7
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
       - name: run_all_tests
         run: |
           pip install -r requirements.txt
