--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-
+import pandas as pd
+import numpy as np
+import os
+import tqdm
+from tensorflow.keras.models import Sequential
+from tensorflow.keras.layers import Dense, LSTM, Dropout
+from tensorflow.keras.callbacks import ModelCheckpoint, TensorBoard, EarlyStopping
+from sklearn.model_selection import train_test_split
